--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "typeorm": "typeorm-ts-node-commonjs",
-    "typeorm:migration:generate": "npm run typeorm migration:run -- migration:generate src/migration",
-    "typeorm:migration:run": "npm run typeorm -- migration:run -d src/app.module.ts",
-    "typeorm:migration:revert": "npm run typeorm -- migration:revert -d src/app.module.ts",
+    "typeorm:migration:generate": "npm run typeorm -- migration:generate src/migration -d src/typeorm.datasource.ts",
+    "typeorm:migration:run": "npm run typeorm -- migration:run -d src/typeorm.datasource.ts",
+    "typeorm:migration:revert": "npm run typeorm -- migration:revert -d src/typeorm.datasource.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
